[project]
name = "docuware-client"
version = "0.7.9"
description = "DocuWare REST-API client"
authors = [{ name = "Stefan Schönberger", email = "stefan@sniner.dev" }]
requires-python = ">=3.9"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["httpx[http2]>=0.23.0"]

[project.urls]
Repository = "https://github.com/sniner/docuware-client"

[project.scripts]
dw-client = "docuware.cli.dw:main"

[dependency-groups]
dev = [
    "pytest>=8.2.2,<9",
    "basedpyright>=1.38.2,<2",
    "ruff>=0.15.5,<0.16",
    "pytest-cov>=7.0.0",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv-build>=0.10.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "docuware"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = ["integration"]

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 96

[tool.ruff.lint]
ignore = ["E402"]
per-file-ignores = { "__init__.py" = ["F401"] }
